# meitner

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
src/meitner/: __init__.py  example.py
tests/: __init__.py  test_example.py
